参考文献 & 项目目录重构 & typst（实验性）

--- a/data/models.ipynb
+++ b/data/models.ipynb
@@ -72,7 +72,7 @@
     "        plt.plot(sol.t, y, label=f\"N_{i}\")\n",
     "    plt.xlabel(\"t\")\n",
     "    plt.ylabel(\"N\")\n",
-    "    plt.savefig(f\"./figures/{name}.{fmt}\", format=fmt)\n",
+    "    plt.savefig(f\"../thesis/figures/{name}.{fmt}\", format=fmt)\n",
     "    plt.show()"
    ]
   },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "83ddafe8",
    "metadata": {},
    "outputs": [],
