--- a/thesis/article.tex
+++ b/thesis/article.tex
@@ -9,11 +9,14 @@
 \usepackage{fancyhdr}
 \usepackage[scale=0.8]{geometry}
 % content
+\usepackage[backref=true]{biblatex}
 \usepackage{authblk}
 \usepackage{graphicx}
-\usepackage[backref]{hyperref}
+\usepackage{hyperref}
 
 \pagestyle{fancy}
+
+\addbibresource{reference.bib}
 
 \title{对种群动态的数学手段模式化分析方法建立暨对实际农作物生产场景预测分析}
 \author{马宜远}
@@ -21,19 +24,18 @@
 \author{王明哲 \thanks{通讯作者}}
 \renewcommand \Authands{,}
 \affil{大连第二十四中学}
-\date{}
 
 \begin{document}
 
 \twocolumn[
     \maketitle
-    \begin{abstract}
-        生态学在农业生产中常被用于预测农作物产量。
-        本文使用计算机分析方法，
-        就不同生态因素对叶菜类农作物产量影响进行建模，
-        得到了综合种内、种间竞争、天敌影响、土壤肥力等生态因素综合作用下的叶菜类农作物种群数量模型，
-        最终得以精准预测、精准干预。
-    \end{abstract}
+    摘要：
+    生态学在农业生产中常被用于预测农作物产量。
+    本文使用计算机分析方法，
+    就不同生态因素对叶菜类农作物产量影响进行建模，
+    得到了综合种内、种间竞争、天敌影响、土壤肥力等生态因素综合作用下的叶菜类农作物种群数量模型，
+    最终得以精准预测、精准干预。
+    \vspace{1cm}
 ]
 \saythanks
 
@@ -58,10 +60,10 @@
 \subsection{Logistic 增长模型}
 
 \subsubsection{简述}
-皮埃尔·费尔哈斯(P.F.Verhulst, 1804-1809)于 1838 年引入逻辑斯蒂方程。
+皮埃尔-弗朗索瓦·韦吕勒（P.F.Verhulst, 1804-1849）于 1838 年提出逻辑斯蒂方程 \autocite{logistic_origin}。
 其为描述资源有限的环境下种群增长的最简单的方程，
 也是很多生态学模型的基础，即我们熟知的 S 形增长曲线。
-\cite{primer_eco}
+
 
 \subsubsection{数学模型描述}
 由于资源有限和种内竞争的存在，我们不难理解逻辑斯蒂方程的微分形式:
@@ -134,75 +136,59 @@ $$ \frac{\mathrm{d} P}{\mathrm{d} t} = -a_3 + c_3 (1 - e^{d_4} H) $$
 \subsection{计算机模拟结果对实际应用的作用}
 
 \subsubsection{预见性}
-原始的农业生产在有限的经验下，需要
-克服不确定的气候、资源等因素，才能提升产
-量。计算机的模拟可以使经验判断成为定量
-计算。值得注意的是，这种预见性并不要求
-模型的绝对准确。复杂计算机模型的校准需
-要明确处理结构的误差——意识到模型只是
-对现实的近似，结果本身包含一定误差，这
-对决策者而言也是非常重要的信息。
+原始的农业生产在有限的经验下，
+需要克服不确定的气候、资源等因素，才能提升产量。
+计算机的模拟可以使经验判断成为定量计算。
+值得注意的是，这种预见性并不要求模型的绝对准确。
+复杂计算机模型的校准需要明确处理结构的误差——意识到模型只是对现实的近似，
+结果本身包含一定误差，这对决策者而言也是非常重要的信息。
 
 \subsubsection{优化性}
-如上文所述，模型只是对现实的近似。显
-而易见，模型越逼近现实，其实用价值越高。
-计算机模拟与优化算法的结合，为解决这类
-问题提供了可行路径。优化算法可以自我改
-进深度优化算法可以探索许多人类无法察觉
-的微小因素从而做出更加精准的判断。
+如上文所述，模型只是对现实的近似。
+显而易见，模型越逼近现实，其实用价值越高。
+计算机模拟与优化算法的结合，为解决这类问题提供了可行路径。
+优化算法可以自我改进深度优化算法，探索许多人类无法察觉的微小因素，
+从而做出更加精准的判断。
 
 \subsubsection{普及性}
-理想情况下，每一个农民都要掌握一定
-的气象、经济学知识，能准确解读天气数据，
-能优化资源配置，但现实不是这样的。计算
-机模拟在降低专业知识应用门槛方面可以发
-挥独特作用。农民不必理解模型内部的微分
-方程，不必掌握编程技能就能获得准确可靠
-的数据。
+理想情况下，每一个农民都要掌握一定的气象、经济学知识，
+能准确解读天气数据，能优化资源配置，但现实不是这样的。
+计算机模拟在降低专业知识应用门槛方面可以发挥独特作用。
+农民不必理解模型内部的微分方程，不必掌握编程技能就能获得准确可靠的数据。
 
 \section{结论与展望}
-数学建模与计算机模拟的价值，终究要
-由实践来检验。在这个意义上，模型永远只
-是模型——是对现实的简化与近似。但这种
-简化如果得当，就能帮助我们从复杂中识别
-简单，从噪声中辨别信号，从不确定性中锚
-定决策。这或许正是“对种群动态的数学手
-段模式化分析”对农作物生产场景的最根本
-贡献。当然了，我们也要看到研究的局限性。
-从空间的角度看，如在 LV 竞争模型中，如
-果我们拥有一个更加广阔的充足空间，就需
-要考虑到种群的空间分布对于其数量变化的
-影响。例如大型食肉动物对小型动物的威慑
-作用。从时间的角度看，因其还不具备引入
-长期复杂现实因素的能力，可能在更加广阔
-的时间尺度上略显逊色。例如将时间线拉长，
-我们可能要考虑到进化、演替等因素，以及
-基因的变异、自然选择等等。短期内这些因
-素不会对模拟结果造成太大影响，但是当时
-间线拉长，它们对于预测结果的影响程度成
-指数级增加，成为我们不能忽略不计的因素。
-从社会的角度看，计算机模拟的能力仍然不
-足。从人类影响的程度上看，就本研究的例
-子而言，当我们进一步思考实际意义，我们
-需要考虑到人工对害虫的扑杀等因素。人类
-对自然的影响是丰富的，不仅仅体现在程度
-上，更体现在形式上。每一个人的细微举动
-都会对自然造成影响，当人流量增大，如在
-考虑人口增长或是城市中公园的生态问题时，
-这些影响也是不可忽略的因素。而计算机如
-何体现各种各样形式的影响成为了我们面对
-此类问题时的主要挑战。数学建模与计算机
-模拟的价值，终究要由实践来检验。在这个
-意义上，模型永远只是模型——是对现实的
-简化与近似。但这种简化如果得当，就能帮
-助我们从复杂中识别简单，从噪声中辨别信
-号，从不确定性中锚定决策。这或许正是“对
-种群动态的数学手段模式化分析”对农作物
-生产场景的最根本贡献。我们相信在不远的
-将来，计算机技术可以成熟的被运用到实际
-生产生活当中，让人类的生活更加美好。
+数学建模与计算机模拟的价值，终究要由实践来检验。
+在这个意义上，模型永远只是模型——是对现实的简化与近似。
+但这种简化如果得当，
+就能帮助我们从复杂中识别简单，从噪声中辨别信号，从不确定性中锚定决策。
+这或许正是“对种群动态的数学手段模式化分析”对农作物生产场景的最根本贡献。
+当然了，我们也要看到研究的局限性。
+从空间的角度看，如在 LV 竞争模型中，如果我们拥有一个更加广阔的充足空间，
+就需要考虑到种群的空间分布对于其数量变化的影响。
+例如大型食肉动物对小型动物的威慑作用。
+从时间的角度看，因其还不具备引入长期复杂现实因素的能力，
+可能在更加广阔的时间尺度上略显逊色。
+例如将时间线拉长，我们可能要考虑到进化、演替等因素，
+以及基因的变异、自然选择等等。
+短期内这些因素不会对模拟结果造成太大影响，
+但是当时间线拉长，它们对于预测结果的影响程度成指数级增加，
+成为我们不能忽略不计的因素。
+从社会的角度看，计算机模拟的能力仍然不足。
+从人类影响的程度上看，就本研究的例子而言，当我们进一步思考实际意义，
+我们需要考虑到人工对害虫的扑杀等因素。
+人类对自然的影响是丰富的，不仅仅体现在程度上，更体现在形式上。
+每一个人的细微举动都会对自然造成影响，
+当人流量增大，如在考虑人口增长或是城市中公园的生态问题时，
+这些影响也是不可忽略的因素。
+而计算机如何体现各种各样形式的影响成为了我们面对此类问题时的主要挑战。
+数学建模与计算机模拟的价值，终究要由实践来检验。
+在这个意义上，模型永远只是模型——是对现实的简化与近似。
+但这种简化如果得当，
+就能帮助我们从复杂中识别简单，从噪声中辨别信号，从不确定性中锚定决策。
+这或许正是“对种群动态的数学手段模式化分析”对农作物生产场景的最根本贡献。
+我们相信在不远的将来，
+计算机技术可以成熟的被运用到实际生产生活当中，让人类的生活更加美好。
 
-\bibliographystyle{plain}
-\bibliography{reference}
+\printbibliography[title=参考文献]
 
 \end{document}
